[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ui/SoundOptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]

[node name="SoundOptionsMenu" type="VBoxContainer"]
margin_right = 163.0
margin_bottom = 72.0
theme = ExtResource( 2 )
custom_constants/separation = 12
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 163.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 8.0
margin_right = 129.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Music:"

[node name="ButtonMuteMusic" type="Button" parent="HBoxContainer"]
margin_left = 133.0
margin_right = 163.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
toggle_mode = true
pressed = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 42.0
margin_right = 163.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_top = 8.0
margin_right = 129.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "SOUND:"

[node name="ButtonMuteSound" type="Button" parent="HBoxContainer2"]
margin_left = 133.0
margin_right = 163.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
toggle_mode = true
pressed = true

[connection signal="toggled" from="HBoxContainer/ButtonMuteMusic" to="." method="_on_ButtonMuteMusic_toggled"]
[connection signal="toggled" from="HBoxContainer2/ButtonMuteSound" to="." method="_on_ButtonMuteSound_toggled"]
